add validators and paginator

--- a/templates/route_filter.html
+++ b/templates/route_filter.html
@@ -27,7 +27,11 @@
         <option value="Car">Car</option>
         <option value="Bike">Bike</option>
     </select>
+   <div>
+    <label for="page">Select a page</label>
+    <input name="page" id="page" value="1" />
   </div>
+    </div>
     <button>Show results</button>
   </div>
 </form>
